# Serca-core

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  flake.nix
.github/workflows/: greetings.yml
ai-pipe/: Serca.ipynb  descriptions.txt  main.py  pipe.py  requirements.txt  streamer.py  test.py  utils.py
ai-pipe/ai-worker/: blip.py  main.py  processor.py  server.py  yolo.py
s_serca/: Cargo.toml  blacklist.txt  found_media.txt  found_urls.txt  spent_urls.txt  urls.txt
s_serca/aipipe/: gemini_api.rs  mod.rs
s_serca/serca/: Cargo.toml
s_serca/serca/src/: lib.rs
s_serca/serca/src/ai/: inference.rs  mod.rs  model.rs  pipecontroller.rs
s_serca/serca/src/plugin_manager/: dealer.rs
s_serca/serca/src/web/: marionette.rs  mod.rs  puppeteer.rs
s_serca/src/: main.rs
s_serca/src/media/: mod.rs  ripper.rs  streamer.rs
vsearch/: Cargo.toml  flake.nix
vsearch/elvira/: Cargo.toml
vsearch/elvira/src/: lib.rs  scrapper.rs
vsearch/serca/: Cargo.toml
